--- a/pkg/plugin/report/templates/footer.gohtml
+++ b/pkg/plugin/report/templates/footer.gohtml
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
    <style type="text/css">
       #footer {
@@ -5,31 +6,31 @@
       }
 	  
       .content-footer {
-         width: 100%;
-         background-color: white;
-         color: black;
-         padding: 5px;
-         -webkit-print-color-adjust: exact;
-         vertical-align: middle;
-         font-style: italic;
-         font-size: 10px;
-         margin-top: 0;
-         display: inline-block;
-         text-align: center;
+         width: 100%
+         background-color: white
+         color: black
+         padding: 5px
+         -webkit-print-color-adjust: exact
+         vertical-align: middle
+         font-style: italic
+         font-size: 10px
+         margin-top: 0
+         display: inline-block
+         text-align: center
       }
 
       .content-footer-right {
-         float: right;
+         float: right
       }
    </style>
    <body>
       <div class="content-footer">
          Page <span class="pageNumber"></span> of <span class="totalPages"></span>
-         {{- if .Logo}}
+         {{- with .Conf.EncodedLogo }}
          <div class="content-footer-right">
-            <img src="{{embed .Logo}}" height="25" alt="Logo" />
+            <img src="{{ embed . }}" height="25" alt="Logo" />
          </div>
-         {{- end}}
+         {{- end }}
       </div>
    </body>
 </html>
