--- a/pkg/plugin/report/templates/header.gohtml
+++ b/pkg/plugin/report/templates/header.gohtml
@@ -33,13 +33,9 @@
     <body>
         <div class="content-header">
             <div class="content-header-left">generated on {{.Date}}</div>
-            <div class="content-header-right">Datetime range: {{.From}} to {{.To}}</div>
+            <div class="content-header-right">Datetime range: {{.Dashboard.TimeRange.FromTime | formatDate }} to {{.Dashboard.TimeRange.ToTime | formatDate}}</div>
             <br />
             {{ .Dashboard.Title }} <span class="pageNumber"></span>/<span class="totalPages"></span>
-            {{- if .Dashboard.VariableValues}}
-            <br />
-            <div class="content-header-left">{{ .Dashboard.VariableValues }}</div>
-            {{- end}}
         </div>
     </body>
 </html>
