--- a/pkg/plugin/report/templates/report.gohtml
+++ b/pkg/plugin/report/templates/report.gohtml
@@ -55,44 +55,40 @@
         display: block;
     }
 
-    {{- if .IsGridLayout}} 
-        {{- range $i, $v := .Panels}} 
+    {{- if eq .Conf.Layout "grid" }}
+        {{- range $i, $v := .Dashboard.Panels}}
     .grid-image-{{$i}} {
         grid-column: {{inc $v.GridPos.X}} / span {{$v.GridPos.W}};
         grid-row: {{inc $v.GridPos.Y}} / span {{$v.GridPos.H}};
     }
-
-        {{end }}
-
-    {{else}}
-        {{- range $i, $v := .Panels}} 
+        {{- end }}
+    {{- else }}
+        {{- range $i, $v := .Dashboard.Panels}}
     .grid-image-{{$i}} {
         grid-column: 1 / span 24;
         grid-row: {{mult $i}} / span 30;
     }
-
-        {{end }}
-
-    {{end }}
+        {{- end }}
+    {{- end }}
 </style>
 
 <head>
     <meta charset="UTF-8">
-    <title>Grafana Dashboard Report</title>
+    <title>{{ .Dashboard.Title }}</title>
 </head>
 
 <body>
     <div class="container">
         <div class="grid">
-            {{- range $i, $v := .Dashboard.Panels}}
+            {{- range $i, $v := .PanelPNGs }}
             <figure class="grid-image grid-image-{{$i}}">
-                <img src="{{ print $v.EncodedImage | url }}" id="image{{$v.ID}}" alt="{{$v.Title}}" class="grid-image">
+                <img src="{{ print $v | url }}" id="image{{$v.Panel.ID}}" alt="{{$v.Panel.Title}}" class="grid-image">
             </figure>
             {{- end }}
         </div>
     </div>
-    {{- range $i, $v := .Dashboard.Panels }}
-        {{- if $v.CSVData }}
+    {{- range $i, $v := .PanelTables }}
+        {{- if $v.Data }}
         <div style="break-after:page"></div>
 
         <div class="container">
@@ -100,13 +96,13 @@
             <table>
                 <thead>
                     <tr>
-                        {{- range $j, $w := index $v.CSVData 0}}
+                        {{- range $j, $w := index $v.Data 0}}
                         <th>{{$w}}</th>
                         {{- end }}
                     </tr>
                 </thead>
                 <tbody>
-                    {{- range $j, $w := slice $v.CSVData 1}}
+                    {{- range $j, $w := slice $v.Data 1}}
                     <tr>
                         {{- range $k, $x := $w}}
                         <td>{{$x}}</td>
